error_templates/java/test_files/parse_end_of_file_error/test.txt
template: "Java.ParseEndOfFileError"
---
EOF.java:4: error: reached end of file while parsing
    }
     ^
1 error
===
template: "Java.ParseEndOfFileError"
---
# ParseEndOfFileError
This error occurs when the compiler expects more code but encounters the end of the file.
```
        System.out.println("This is a sample program.");
    }
     ^

```
## Steps to fix
### Complete the code
Add the missing `}` in line 4.
```diff
    public static void main(String[] args) {
        System.out.println("This is a sample program.");
    }
+ }

```
